fix: increase chat group spacing

--- a/livekit-static/styles.css
+++ b/livekit-static/styles.css
@@ -1938,7 +1938,7 @@ label {
 }
 
 .message + .message:not(.grouped) {
-  margin-top: 10px;
+  margin-top: 18px;
 }
 
 .message.grouped .message-avatar {
